@@ -39,8 +39,17 @@ aStringField 'the rain in spain, falls mainly on the plain' and aDoubleField = 4
 instance members:
 instanceStringField 'squeeze box 2' instanceBooleanField = true
 ------------------------------------------------------------
-Warning: no field named nofield in class org.hick.blah.SqueezeBox at line 39
-Warning: unable to convert 'false and true?' to a boolean at line 43
+static members:
+aStringField 'the rain in spain, falls mainly on the plain' and aDoubleField = 5.0
+instance members:
+instanceStringField 'this is another test' instanceBooleanField = true
+static members:
+aStringField 'the rain in spain, falls mainly on the plain' and aDoubleField = 5.0
+instance members:
+instanceStringField 'squeeze box 2' instanceBooleanField = true
+------------------------------------------------------------
+Warning: no field named nofield in class org.hick.blah.SqueezeBox at line 45
+Warning: unable to convert 'false and true?' to a boolean at line 49
 34
 56
 Done?
